--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,7 @@ enable_testing()
 
 project(SimpleGL)
 
-set(CMAKE_BUILD_TYPE Debug)
-
-if(UNIX)
+if(NOT MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 endif()
 
