--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,15 @@ enable_testing()
 project(SimpleGL)
 
 if(NOT MSVC)
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c11")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 endif()
 
 set(SOURCES src/main.cpp)
+
+# OpenGL
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
 
 # GLFW
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "")
