--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,13 @@
-[submodule "ext/glfw"]
-	path = ext/glfw
-	url = https://github.com/glfw/glfw.git
-	branch = latest
-[submodule "ext/glm"]
-	path = ext/glm
-	url = https://github.com/g-truc/glm.git
-	branch = 0.9.6
 [submodule "ext/glad"]
 	path = ext/glad
 	url = https://github.com/Dav1dde/glad.git
 	branch = c
+[submodule "ext/glfw"]
+	path = ext/glfw
+	url = https://github.com/glfw/glfw.git
+[submodule "ext/glm"]
+	path = ext/glm
+	url = https://github.com/g-truc/glm.git
+[submodule "ext/gtest"]
+	path = ext/gtest
+	url = https://github.com/svn2github/googletest.git
