--- a/.gitmodules
+++ b/.gitmodules
@@ -5,9 +5,12 @@
 [submodule "ext/glfw"]
 	path = ext/glfw
 	url = https://github.com/glfw/glfw.git
+	branch = master
 [submodule "ext/glm"]
 	path = ext/glm
 	url = https://github.com/g-truc/glm.git
+	branch = master
 [submodule "ext/gtest"]
 	path = ext/gtest
 	url = https://github.com/svn2github/googletest.git
+	branch = master
